Fix : Keys and overflow

--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -4,13 +4,12 @@
 .wrapper {
     opacity: 0;
     visibility: hidden;
-    width: 100%;
-    height: 100%;
+    height: fit-content;
 
     position: absolute;
     top: 25%;
     left: calc(10% + 300px);
-    right: 10%;
+    right: 2%;
     z-index: 1;
 }
 
@@ -22,7 +21,7 @@
     column-gap: 1rem;
     justify-content: center;
     align-items: center;
-    width: calc(90% - 300px);
+    width: 100%;
     // height: 60%; 
 }
 
@@ -43,7 +42,6 @@
     justify-content: center;
     width: 160px;
     text-align: center;
-
 }
 
 .imgContainer {
