--- a/src/styles/HUD.module.scss
+++ b/src/styles/HUD.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
   // display: none;
   position: fixed;
+  width: 100vw;
+  height: 100svh;
   top: 0;
-  left: 0;
-  inset: 0;
   // z-index: 4;
 
   // background-image: url("/images/cockpit.png");
@@ -23,7 +23,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100svh;
   object-fit: contain;
 
   pointer-events: none;
@@ -37,7 +37,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%;
+  height: 100svh;
   object-fit: contain;
 
   pointer-events: none;
@@ -507,9 +507,11 @@
       0px 0px 4.419px rgba(134, 244, 232, 0.8);
     font-size: 1.3rem;
 
+    transition: all 0.2s ease-in-out;
+
     &.active {
-      text-shadow: 0px 0px 27.356px #b16060,
-        0px 0px 4.419px rgba(251, 186, 188, 0.8);
+      text-shadow: 0px 0px 24.402px rgba(198, 50, 50, 0.86),
+        0px 0px 3.754px rgba(198, 50, 50, 0.8);
       color: var(--hover-link);
     }
   }
